add tutorial code

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,14 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>programatically change active tab</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    This little demo shows how to change the active tab from a child view (modal) in ionic. <br />
+    Blog post can be found <a href="">here</a>
   </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ol>
+    <li>Click "Add"</li>
+    <li>Add Stuff</li>
+    <li>Yiiha, you are now at the list page</li>
+  </ol>
 </ion-content>
