add example for kumar

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,5 @@
     <li>Add Stuff</li>
     <li>Yiiha, you are now at the list page</li>
   </ol>
+  <button ion-button (click)="addPage()">Kumar click here</button>
 </ion-content>
